Fix y-spacing between elements in the action colum

--- a/src/components/dataTable/dataTable.scss
+++ b/src/components/dataTable/dataTable.scss
@@ -12,6 +12,7 @@
         .MuiDataGrid-cell.MuiDataGrid-cell--textLeft {
             display: flex;
             align-items: center;
+            line-height: 1.6;
         }
     
         img {
